--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         padding: 0;
     }
 
-    #numpad_container {
+    .button_layout {
         display: grid;
+        grid-gap: 10px;
+    }
+
+    .button_container {
+
     }
 
     .operations-buttons {
