--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
     .button_layout{
         display: grid;
         grid-template-columns: repeat(4 , 1fr);
-        grid-gap: 10px;
-        padding: 20px;
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-
-    .button_layout {
-        display: grid;
-        grid-gap: 10px;
+        width: fit-content;
+        /* margin: 0 auto; */
     }
 
     .button_container {
+        width: fit-content;
+        
+    }
 
+    button {
+        width: fit-content;
+        padding: 40px;
     }
 
     .operations-buttons {
@@ -58,17 +57,17 @@
 </div>
 
 <div class="button_layout">
-    <div class="button_container"><button onclick=""></button></div>
-    <div class="button_container"><button onclick=""></button></div>
-    <div class="button_container"><button onclick=""></button></div>
-    <div class="button_container"><button onclick=""></button></div>
-    <div class="button_container"><button onclick=""></button></div>
-    <div class="button_container"><button onclick=""></button></div>
-    <div class="button_container"><button onclick=""></button></div>
-    <div class="button_container"><button onclick=""></button></div>
-    <div class="button_container"><button onclick=""></button></div>
-    <div class="button_container"><button onclick=""></button></div>
-    <div class="button_container"><button onclick=""></button></div>
+    <div class="button_container"><button onclick="">1</button></div>
+    <div class="button_container"><button onclick="">2</button></div>
+    <div class="button_container"><button onclick="">3</button></div>
+    <div class="button_container"><button onclick="">4</button></div>
+    <div class="button_container"><button onclick="">5</button></div>
+    <div class="button_container"><button onclick="">6</button></div>
+    <div class="button_container"><button onclick="">7</button></div>
+    <div class="button_container"><button onclick="">8</button></div>
+    <div class="button_container"><button onclick="">9</button></div>
+    <div class="button_container"><button onclick="">0</button></div>
+    <div class="button_container"><button onclick="">Enter</button></div>
     <div class="button_container"><button onclick=""></button></div>
     <div class="button_container"><button onclick=""></button></div>
     <div class="button_container"><button onclick=""></button></div>
