--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     }
     .button_container button{
         padding: 10px;
+        height: 75px;
+        width: 75px;
     }
     #numpad_container {
         display: grid;
