created basic operation function to link to html buttons

--- a/index.html
+++ b/index.html
@@ -78,30 +78,30 @@
 </div>
 
 <div class="button_layout">
-    <div class="button_container"><button onclick="">%</button></div>
-    <div class="button_container"><button onclick="">CE</button></div>
-    <div class="button_container"><button onclick="">C</button></div>
-    <div class="button_container"><button onclick="">Delete</button></div>
+    <div class="button_container"><button onclick="calculation('%')">%</button></div>
+    <div class="button_container"><button onclick="calculation('CE')">CE</button></div>
+    <div class="button_container"><button onclick="calculation('C')">C</button></div>
+    <div class="button_container"><button onclick="calculation('Delete')">Delete</button></div>
     <div class="button_container"><button onclick=""></button> </div>
-    <div class="button_container"><button onclick="">x<sup>2</sup></button></div>
-    <div class="button_container"><button onclick=""><math><msqrt><mi>x</mi></msqrt></math></button></div>
-    <div class="button_container"><button onclick="">/</button></div>
-    <div class="button_container"><button onclick="">7</button></div>
-    <div class="button_container"><button onclick="">8</button></div>
-    <div class="button_container"><button onclick="">9</button></div>
-    <div class="button_container"><button onclick="">*</button></div>
-    <div class="button_container"><button onclick="">4</button></div>
-    <div class="button_container"><button onclick="">5</button></div>
-    <div class="button_container"><button onclick="">6</button></div>
-    <div class="button_container"><button onclick="">-</button></div>
-    <div class="button_container"><button onclick="">1</button></div>
-    <div class="button_container"><button onclick="">2</button></div>
-    <div class="button_container"><button onclick="">3</button></div>
-    <div class="button_container"><button onclick="">+</button></div>
-    <div class="button_container"><button onclick="">+/-</button></div>
-    <div class="button_container"><button onclick="">0</button></div>
-    <div class="button_container"><button onclick="">.</button></div>
-    <div class="button_container"><button onclick="">Enter</button></div>
+    <div class="button_container"><button onclick="calculation('squared')">x<sup>2</sup></button></div>
+    <div class="button_container"><button onclick="calculation('square root')"><math><msqrt><mi>x</mi></msqrt></math></button></div>
+    <div class="button_container"><button onclick="calculation('/')">/</button></div>
+    <div class="button_container"><button onclick="calculation(7)">7</button></div>
+    <div class="button_container"><button onclick="calculation(8)">8</button></div>
+    <div class="button_container"><button onclick="calculation(9)">9</button></div>
+    <div class="button_container"><button onclick="calculation('*')">*</button></div>
+    <div class="button_container"><button onclick="calculation(4)">4</button></div>
+    <div class="button_container"><button onclick="calculation(5)">5</button></div>
+    <div class="button_container"><button onclick="calculation(6)">6</button></div>
+    <div class="button_container"><button onclick="calculation('-')">-</button></div>
+    <div class="button_container"><button onclick="calculation(1)">1</button></div>
+    <div class="button_container"><button onclick="calculation(2)">2</button></div>
+    <div class="button_container"><button onclick="calculation(3)">3</button></div>
+    <div class="button_container"><button onclick="calculation('+')">+</button></div>
+    <div class="button_container"><button onclick="calculation('neagtive')">+/-</button></div>
+    <div class="button_container"><button onclick="calculation(0)">0</button></div>
+    <div class="button_container"><button onclick="calculation('.')">.</button></div>
+    <div class="button_container"><button onclick="calculation('=')">Enter</button></div>
 </div>
 
 
