Added placeholder value in output box, updated some javascript code for the caluclator

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
     }
 
     #output_box {
-        font-size: 50px;
+        text-align: right;
+    }
+
+    input {
+        border: none;
+        outline: none;
+        text-align: right;
+        font-size: 23px;
     }
 
     .button_layout{
@@ -74,7 +81,9 @@
 
 <body>
 <div id="output_body">
-    <p id="output_box">Test</p>
+    <p id="output_box">
+        <input type="text" placeholder="0">
+    </p>
 </div>
 
 <div class="button_layout">
