added equals, sqrt, and square

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <div class="button_container"><button onclick="calculation('C')">C</button></div>
     <div class="button_container"><button onclick="calculation('Delete')">Delete</button></div>
     <div class="button_container"><button onclick=""></button> </div>
-    <div class="button_container"><button onclick="calculation('squared')">x<sup>2</sup></button></div>
-    <div class="button_container"><button onclick="calculation('square root')"><math><msqrt><mi>x</mi></msqrt></math></button></div>
+    <div class="button_container"><button onclick="calculation('exponent')">x<sup>2</sup></button></div>
+    <div class="button_container"><button onclick="calculation('sqrt')"><math><msqrt><mi>x</mi></msqrt></math></button></div>
     <div class="button_container"><button onclick="calculation('/')">/</button></div>
     <div class="button_container"><button onclick="calculation(7)">7</button></div>
     <div class="button_container"><button onclick="calculation(8)">8</button></div>
