Adding javascript exponent / sqrt functionality

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="button_container"><button class="num_buttons" onclick="calculation(2)">2</button></div>
     <div class="button_container"><button class="num_buttons" onclick="calculation(3)">3</button></div>
     <div class="button_container"><button class="operations-buttons" onclick="calculation('+')">+</button></div>
-    <div class="button_container"><button class="num_buttons" onclick="calculation('+/-')">+/-</button></div>
+    <div class="button_container"><button class="num_buttons"></button> </div>
     <div class="button_container"><button class="num_buttons" onclick="calculation(0)">0</button></div>
     <div class="button_container"><button class="num_buttons" onclick="calculation('.')">.</button></div>
     <div class="button_container"><button id="equal_button" onclick="calculation('=')">=</button></div>
